# awsx

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/awsx/: main.py  switcher.py
