[project]
name = "awsx"

version = "2.0.0"

authors = [
  { name="Xu", email="deep.work.max@gmail.com" },
]

description = "awsx"

readme = "README.md"

requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
        'Click',
        'boto3',
        'configparser',
        'pyperclip',
        'psutil'
    ]


[project.scripts]
awsx="main:aws_cli"

[project.urls]
"Homepage" = "https://github.com/Xu-Hardy/awsx"
"Bug Tracker" = "https://github.com/Xu-Hardy/awsx/issues"
